--- a/main.css
+++ b/main.css
@@ -28,6 +28,7 @@ body {
     background-size: cover;
     /* font-family: 'Playfair Display', serif; */
     font-family: 'Lato', sans-serif;
+    overflow-x: hidden; 
 }
 
 section {
